tests/fixtures/invalid/int_set.py
# Cannot call int() with Set[int]
x = int({1, 2, 3})
